--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,62 @@
 services:
-  service1:
+  service1_1:
     build:
       context: ./service1
-    ports:
-      - 8199:8199
     expose:
       - 8199
     networks:
       - taskNetwork
+    environment:
+      - SERVICE_NAME=service1_1
+
+
+  service1_2:
+    build:
+      context: ./service1
+    expose:
+      - 8199
+    networks:
+      - taskNetwork
+    environment:
+      - SERVICE_NAME=service1_2
+
+
+  service1_3:
+    build:
+      context: ./service1
+    expose:
+      - 8199
+    networks:
+      - taskNetwork
+    environment:
+      - SERVICE_NAME=service1_3
+
   service2:
     build:
       context: ./service2
     expose:
+      - 8200
+    networks:
+      - taskNetwork
+    environment:
+      - SERVICE_NAME=service2
+  
+  ngingx:
+    build:
+      context: ./nginx
+    ports:
+      - 8198:8198
+    expose:
       - 8198
     networks:
       - taskNetwork
-    
+    depends_on:
+      - service1_1
+      - service1_2
+      - service1_3
+
+  
+
 
 networks:
   taskNetwork:
